--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.1",
     "classnames": "^2.3.2",
+    "node": "^16.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
